# SubUnity

./: .gitignore  Cargo.toml  LICENSE
api/: .gitignore  Cargo.toml
api/migrations/2020-08-17-135043_create_users/: up.sql
api/migrations/2020-08-30-192408_create_subtitles/: down.sql  up.sql
api/migrations/2020-08-31-105641_create_change_log/: up.sql
api/src/: main.rs  settings.rs  subtitles.rs  user.rs  youtube_caption_scraper.rs
api/src/db/: models.rs  schema.rs
api/types/: Cargo.toml  build.rs
api/types/protos/: subtitles.proto  user.proto
api/types/src/: lib.rs
api/types/src/proto/: mod.rs  subtitles.rs  user.rs
web/: .gitignore  Cargo.toml  build.rs
web/js/: .gitignore  package-lock.json  package.json  snowpack.config.js  snowpack.config.json  tsconfig.json  webpack.config.js
web/js/src/: index.js  index.jsx  index.tsx  types.d.ts  types.ts  utils.js  utils.ts
web/js/src/components/: App.jsx  App.tsx  Caption.js  Caption.jsx  Caption.tsx  CaptionList.js  CaptionList.jsx  CaptionList.tsx  Header.jsx  Header.tsx  Loader.tsx  Player.js  Player.jsx  Player.tsx  YouTubePlayer.js  YouTubePlayer.jsx  app.js
web/js/src/styles/: Player.css  captions.css  loader.css  main.css  player.css
web/src/: authentication.rs  main.rs  profile.rs  settings.rs  subtitles.rs  templates.rs
web/src/templates/: statics.rs  template_edit_html.rs  template_index_html.rs  template_profile_html.rs
web/templates/: edit.rs.html  index.rs.html  profile.rs.html
