[package]
name = "api"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
cloud-storage = ["azure_sdk_storage_blob", "azure_sdk_storage_core"]

[dependencies]
prost = "0.6"
tonic = { version = "0.3", features = ["tls"] }
tokio = { version = "0.2", features = ["stream", "macros"] }
futures = "0.3"
async-trait = "0.1"
api-types = { path = "types" }
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15"
openid = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.10"
r2d2 = "0.8"
image = "0.23"
azure_sdk_storage_blob = { version = "0.45", optional = true }
azure_sdk_storage_core = { version = "0.44", optional = true }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"