[package]
name = "web"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
tokio = { version = "0.2", features = ["macros"] }
api-types = { path = "../api/types" }
tonic = { version = "0.3", features = ["tls"] }
config = "0.10"
openid = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
failure = "0.1"
async-trait = "0.1"
chrono = "0.4"
parking_lot = "0.11"

[build-dependencies]
ructe = { git = "https://github.com/wingertge/ructe.git" }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
# rev = "45b4436ed3a7ab913d96c2b69ee4df7fd8c0c618"
default-features = false
features = ["helmet", "serve", "json"]