[package]
name = "api-types"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tonic = "0.3"
prost = "0.6"

[build-dependencies]
tonic-build = "0.3"